# ps_of_py

./: .coverage  .gitignore  PS_OF_PY.xlsm  README.md  loda_data.py  main.py  ps.py  psd.lnk  pyproject.toml  requirements.txt  test.psd  test.py  test.xlsm  test.xlsx  unittest_dev.py
psd/: 测试.psd
src/: layer_factory.py  load_data.py  loda_data.py  logger.py  ps_core.py  ps_layer_changer.py  ps_layer_factory.py  ps_layer_text_changer.py  ps_layer_visible_changer.py  ps_utils.py  timer.py
src/ps/: __init__.py  ps_core.py  ps_layer_factory.py  ps_utils.py
test/: test_base.py  test_bugfix.py  test_main.py  test_new.py
test/test_psd/: 测试.psd
